@@ -5,3 +5,4 @@ v 0.0.1 (unreleased)
 * Update to Dokku 0.5.5 (jvanbaarsen)
 * Brand new design (jvanbaarsen)
 * Scope app name uniqueness to server and not entire IC (jvanbaarsen)
+* Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
